--- a/one/GeoQuiz/src/main/res/values/strings.xml
+++ b/one/GeoQuiz/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
   <string name="false_button">False</string>
   <string name="true_button">True</string>
   <string name="question_text">Constantinople is the largest city in Turkey.</string>
+  <string name="correct_toast">Correct!</string>
+  <string name="incorrect_toast">Incorrect!</string>
 
 </resources>
