--- a/one/GeoQuiz/src/main/res/values/strings.xml
+++ b/one/GeoQuiz/src/main/res/values/strings.xml
@@ -5,8 +5,15 @@
   <string name="action_settings">Settings</string>
   <string name="false_button">False</string>
   <string name="true_button">True</string>
-  <string name="question_text">Constantinople is the largest city in Turkey.</string>
   <string name="correct_toast">Correct!</string>
   <string name="incorrect_toast">Incorrect!</string>
+  <string name="error_message">Index is -1</string>
+
+  <!-- Questions  -->
+  <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
+  <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
+  <string name="question_africa">The source of the Nile River is in Egypt.</string>
+  <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
+  <string name="question_asia">Lake Baikai is the world\'s oldest and deepest freshwater lake.</string>
 
 </resources>
