--- a/one/GeoQuiz/src/main/res/values/strings.xml
+++ b/one/GeoQuiz/src/main/res/values/strings.xml
@@ -10,10 +10,10 @@
   <string name="error_message">Index is -1</string>
 
   <!-- Questions  -->
-  <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
-  <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
-  <string name="question_africa">The source of the Nile River is in Egypt.</string>
-  <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
-  <string name="question_asia">Lake Baikai is the world\'s oldest and deepest freshwater lake.</string>
+  <string name="question_oceans">1) The Pacific Ocean is larger than the Atlantic Ocean.</string>
+  <string name="question_mideast">2) The Suez Canal connects the Red Sea and the Indian Ocean.</string>
+  <string name="question_africa">3) The source of the Nile River is in Egypt.</string>
+  <string name="question_americas">4) The Amazon River is the longest river in the Americas.</string>
+  <string name="question_asia">5) Lake Baikai is the world\'s oldest and deepest freshwater lake.</string>
 
 </resources>
